Post styling fixed, no longer squashed

--- a/chefportfolio/src/App.css
+++ b/chefportfolio/src/App.css
@@ -54,7 +54,7 @@
 .right-nav a:hover {
   border-bottom: 1px solid #ff0033;
 }
-.post-container {
+.post-main-container {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
@@ -68,8 +68,14 @@
   flex-wrap: wrap;
   display: flex;
 }
-.list-card {
+
+.posts-list-container a {
   width: 30%;
+  text-decoration: none;
+}
+
+.list-card {
+  width: 100%;
   border-radius: 7px;
   background: #fff;
   border: 1px solid #eee;
